deployments/homelab/cloud/services/48-netbird/server/calico.generated.yaml
# Generated by components/cloud/services/netbird/render_network.py
apiVersion: crd.projectcalico.org/v1
kind: GlobalNetworkPolicy
metadata:
  name: netbird-egress-enforcement
spec:
  order: 15
  namespaceSelector: kubernetes.io/metadata.name == 'netbird'
  selector: all()
  types:
  - Egress
  egress:
  - action: Allow
    source:
      selector: all()
    protocol: UDP
    destination:
      namespaceSelector: kubernetes.io/metadata.name == 'kube-system'
      selector: k8s-app == 'kube-dns'
      ports:
      - 53
  - action: Allow
    source:
      selector: all()
    protocol: TCP
    destination:
      namespaceSelector: kubernetes.io/metadata.name == 'kube-system'
      selector: k8s-app == 'kube-dns'
      ports:
      - 53
  - action: Allow
    source:
      selector: app.kubernetes.io/name == 'netbird-server'
    protocol: TCP
    destination:
      namespaceSelector: kubernetes.io/metadata.name == 'netbird'
      selector: cnpg.io/cluster == 'netbird-postgres'
      ports:
      - 5432
  - action: Allow
    source:
      selector: app.kubernetes.io/name == 'netbird-server'
    protocol: TCP
    destination:
      nets:
      - 10.21.20.131/32
      ports:
      - 443
  - action: Allow
    source:
      selector: app.kubernetes.io/name == 'netbird-server'
    protocol: TCP
    destination:
      nets:
      - 31.223.15.252/32
      ports:
      - 443
  - action: Allow
    source:
      selector: app.kubernetes.io/name == 'netbird-server'
    protocol: TCP
    destination:
      nets:
      - 10.21.40.128/32
      ports:
      - 443
  - action: Allow
    source:
      selector: app.kubernetes.io/name == 'netbird-server'
    protocol: TCP
    destination:
      namespaceSelector: kubernetes.io/metadata.name == 'envoy-gateway-system'
      selector: gateway.envoyproxy.io/owning-gateway-name == 'matrix-public' && gateway.envoyproxy.io/owning-gateway-namespace
        == 'services-network'
      ports:
      - 10443
  - action: Allow
    source:
      selector: cnpg.io/cluster == 'netbird-postgres'
    protocol: TCP
    destination:
      namespaceSelector: kubernetes.io/metadata.name == 'netbird'
      selector: cnpg.io/cluster == 'netbird-postgres'
      ports:
      - 5432
  - action: Allow
    source:
      selector: cnpg.io/cluster == 'netbird-postgres'
    protocol: TCP
    destination:
      ports:
      - 443
  - action: Allow
    source:
      selector: cnpg.io/cluster == 'netbird-postgres'
    protocol: TCP
    destination:
      ports:
      - 6443
  - action: Deny
